Bug:  890714 Reviewer:  Self Comments:  Switched from using the Apache Commons utility for base64 decoding to the API built into the JDK.
Files:
M    gwt/src/org/kablink/teaming/gwt/server/util/GwtHtml5Helper.java